--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -1,5 +1,5 @@
 .app-table_header {
-    color: #000;
+    color: green;
     background-color: #ff6600;
     font-size: 0.75rem;
     text-align: left;
